@@ -4,7 +4,7 @@
  *                                                                         *
  *   Copyright (C) 2003,2004 by Benno Senoner and Christian Schoenebeck    *
  *   Copyright (C) 2005-2009 Christian Schoenebeck                         *
- *   Copyright (C) 2009 Grigor Iliev                                       *
+ *   Copyright (C) 2009-2010 Grigor Iliev                                  *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -72,9 +72,6 @@ namespace LinuxSampler { namespace sf2 {
                 LinuxSampler::EngineChannel*  pEngineChannel,
                 RTList<Event>::Iterator&      itNoteOffEvent
             );
-
-        private:
-            uint32_t RandomSeed;            ///< State of the random number generator used by the random dimension.
     };
 
 }} // namespace LinuxSampler::sf2
